--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "start:docs": "ng serve demo",
     "lint": "ng lint",
     "test": "ng test --code-coverage iwerk-angular-ui --watch=true",
-    "test-ci": "ng test --code-coverage iwerk-angular-ui --watch=false",
+    "test:ci": "ng test iwerk-angular-ui --watch=false --browsers=ChromeHeadless --code-coverage",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false --versions.chrome=74.0.3729.169",
     "e2e-ci": "ng e2e iwerk-angular-ui-e2e --webdriver-update=false",
