--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
 script:
   - npm run lint
   - npm run test:ci
-  - npm run pree2e
-  - npm run e2e-ci
+  # - npm run pree2e
+  # - npm run e2e-ci
   - npm run build
   - npm run build:docs
 node_js:
